k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongodb-deployment 
  namespace: chat-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mongodb
  template:   
    metadata:
      labels:
        app: mongodb
    spec:
      containers:  
      - name: chatapp-mongodb
        image: mongo:latest
        ports: 
        - containerPort: 27017
        volumeMounts:                # <-- mount the volume here
        - name: mongo-data
          mountPath: /data/db     # MongoDB default data directory
      volumes:
      - name: mongo-data
        persistentVolumeClaim: 
          claimName: mongodb-pvc
